Fix issue with content body not fully filling up, as it was causing an issue in dark mode

--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -1,5 +1,6 @@
 .root {
     color: #ffffff;
+    flex-grow: 1;
 
     .cardsContainer {
         width: 768px;
